--- a/main.tex
+++ b/main.tex
@@ -113,30 +113,17 @@ its one-hop neighbors on the graph). The state still evolves according to a time
 where $A_t = (A_{1,t},\ldots,A_{n,t})$ is the profile of actions taken by the agents in period $t$. We focus on the case with one representative agent per region and identify agent $i$ with region $i$. 
 The agent’s one-period conditional expected utility in region $i$ is given by a function $v_i : \mathcal A_i \times \mathcal S^{N(i)} \to \RR$, while the principal’s one-period conditional expected utility is the average utility across regions,
 \begin{equation}
-U(A_t,S_t) = \frac{1}{n} \sum_{i=1}^n v_i\p{A_{i,t}, S_{N(i),t}}.
+u(A_t,S_t) = \frac{1}{n} \sum_{i=1}^n v_i\p{A_{i,t}, S_{N(i),t}}.
 \end{equation}
-
-We impose the following locality assumption on rewards and dynamics. 
-This assumption says that, conditional on the current local environment around a region $i$, neither the instantaneous payoff nor the law of $S_{i,t+1}$ depends on what happens in distant parts of the network.  
-In particular, externalities and information propagate across the system only through the edges of $G$. This will potentially allow us to work with local posteriors over $S_{N(i),t}$ and to formulate the persuasion and incentive-compatibility constraints in terms of neighborhoods $N(i)$ rather than the full state $S_t$.  
-Such locality assumptions are reasonable in many applications where interactions are predominantly spatial or geographic, for example, ride-sharing platforms where waiting times and prices in an area depend mainly on nearby demand and supply, or epidemic and diffusion models where the state of a location next period depends on its own and its neighbors' states (add some references here). 
-
-\begin{assu}
-For each region $i$ there exists a neighborhood $N(i) \subseteq V$ such that:
-\begin{enumerate}
-\item The reward of agents in region $i$ depends only on local state in $N(i)$. In other words, for all $s \in \mathcal S^n$,
+We focus on long-run performance in persistent systems such as revenue on ride-sharing platforms or disease control for epidemic mitigation. In such cases, the relevant KPIs are naturally per-period averages (e.g., average waiting time, match rate, or infection incidence). Accordingly, the principal evaluates a (stationary) recommendation policy $\pi$ by its stationary average utility
 \begin{equation}
-v_i(a_i,s) = v_i(a_i,s_{N(i)}).
+U(\pi) = \lim_{T\to\infty}\frac{1}{T}\EE[\pi]{u(A_t,S_t)}.
 \end{equation}
-\item he next-period state of region $i$ depends on $(S_t,A_t)$ only through the local configuration $(S_{N(i),t},A_{N(i),t})$.  Formally, for all measurable $\mathcal S' \subseteq \mathcal S$,
+Under mild regularity conditions (to be added), the limit exists and there is a stationary distribution $d_{\pi}$ over states. In that case, the objective can be written as
 \begin{equation}
-\PP{S_{i,t+1} \in \mathcal S'\cond S_t = s, A_t = a} = 
-\PP{S_{i,t+1} \in \mathcal S'\cond S_t = s', A_t = a'}
+U(\pi) = \EE[S\sim d_{\pi}]{\EE[A\sim\pi]{u(A,S)\cond S}}.
 \end{equation}
-whenever $(s_{N(i)},a_{N(i)}) = (s'_{N(i)},a'_{N(i)})$.
-\end{enumerate}
-\end{assu}
-
+This formulation captures the steady performance of the system after transients wash out.
 
 Throughout, the principal fully observes $S_t$ and commits to a (possibly randomized) recommendation policy $\pi: \mathcal S^n \to \Delta(\mathcal A_1 \times \cdots \times \mathcal A_n)$
 so that in period $t$ a recommendation profile
@@ -167,8 +154,8 @@ For a given prior $\mu$ on $S_t$, and for each region $i$, we define the persuas
 $\mathcal P_i(\mu)$ as the set of probability measures
 $P \in \Delta(\mathcal S^n \times \mathcal A_i)$ such that the marginal of $P$ on $\mathcal S^n$ is $\mu$, and for every $a \in \mathcal A_i$ with $P(R_i = a) > 0$,
 \begin{equation}
-\EE{u_i(a,S_t) \cond R_i = a }
-\ge \EE{u_i(a',S_t) \cond R_i = a }
+\EE[\mu]{v_i(a,S_t) \cond R_{i,t} = a }
+\ge \EE[\mu]{v_i(a',S_t) \cond R_{i,t} = a }
 \end{equation}
 for all $a' \in \mathcal A_i$.
 It is well known that, with Bayesian rational agents, any signaling policy is outcome-equivalent to a direct recommendation policy characterized by some $P \in \mathcal P_i(\mu)$.
@@ -177,19 +164,54 @@ persuasion set.
 
 \subsection{Learning the Optimal Persuasion Policy}
 
+In practice, the principal rarely knows the environment (e.g., transition kernel and utilities) exactly.
+What the principal does have is a long log of past interactions generated under some baseline recommendation policy $\pi_0$.
+This naturally leads to an off-policy learning viewpoint: given logged data from $\pi_0$, can we learn a new stationary recommendation policy $\pi$ that achieves higher stationary average utility $U(\pi)$ while preserving incentive compatibility?
 
-\subsection{Local v.s. Global Policies}
+To understand what the learning algorithm should aim for, it is useful to first ask: if we did know the environment,
+how would we compute an optimal persuasion policy?
+
+
+
+\begin{rema}
+With the off-policy learning formulation, it might be tempting to simply collapse the agent incentive layer and treat the recommendation $R_t$ as the action directly. In that view, the problem reduces to finding a policy $R_t \sim \pi(\cdot \cond S_t)$ that maximizes the long-run value of a reduced MDP with state $S_t$ and action $R_t$. One could write the reward in reduced form as 
+\begin{equation}
+\EE[\pi]{u'_{\pi}(r,s)} = \EE[\pi]{\EE[\pi]{u(A,S)\cond S,R}\cond S=s,R=r}
+\end{equation}
+However, this collapsed representation hides an important dependence on the policy $\pi$. The conditional distribution of actions, $A_t\cond (S_t, R_t)$, is generated by agents' best responses to the posterior $\PP{S_t\cond R_t}$, and this posterior itself depends on the global recommendation rule $\pi$ via Bayes' rule. As a consequence, the reduced-form reward $u'_\pi$ is not a fixed function of $(s,r)$ that is invariant across policies, and the collapsed off-policy learning approach is only valid under a strong invariance assumption that the conditional law $A_t\cond (S_t, R_t)$ must be the same for all policies $\pi$ under consideration.
+\end{rema}
 
 \begin{rema}
 Questions to think about:
 \begin{itemize}
-\item How is this different from simply treating $R_{i,t}$ as the action and running a vanilla policy learning algorithm?  
-Possible ans: once we change the recommendation rule, the agents may change how they react to signals, so the environment seen by the principal is no longer stable, and the usual guarantees for policy learning can break down.
-\item What happens if the prior $\mu$ is not observed?  
-In that case, the principal can no longer learn a policy $\pi$ as an explicit function of $\mu$. What can the principal do instead, and what additional regret is induced by not observing $\mu$?
-\item What if the prior $\mu_t$ varies over time (as in the second case in Section~1)? The persuasion set can still be defined in a similar way period by period, but finding the optimal policy becomes more complicated. It should be relatively straightforward to extend the analysis when $\mu_t$ is exogenous, but may require substantially more work when $\mu_t$ is endogenous and depends on past signals and actions.
+\item What happens if the prior $\mu$ is not observed by the principal?  
+In that case, it is unclear what the persuasion set is. (i) assume $\mu$ is common knowledge; (ii) consider a set of $\mu$ and discuss robust/ambiguity-set-type extensions; (iii) assume certain best-response model and do structural estimation
+\item What if the prior $\mu_t$ varies over time (as in the second case in Section~1)? The persuasion set can still be defined in a similar way period by period, but finding the optimal policy becomes more complicated. might be straightforward to extend the analysis when $\mu_t$ is exogenous, but may require substantially more work when $\mu_t$ is endogenous and depends on past signals and actions.
 \end{itemize}
 \end{rema}
+
+\subsection{Local v.s. Global Policies}
+
+We impose the following locality assumption on rewards and dynamics. 
+This assumption says that, conditional on the current local environment around a region $i$, neither the instantaneous payoff nor the law of $S_{i,t+1}$ depends on what happens in distant parts of the network.  
+In particular, externalities and information propagate across the system only through the edges of $G$. This will potentially allow us to work with local posteriors over $S_{N(i),t}$ and to formulate the persuasion and incentive-compatibility constraints in terms of neighborhoods $N(i)$ rather than the full state $S_t$.  
+Such locality assumptions are reasonable in many applications where interactions are predominantly spatial or geographic, for example, ride-sharing platforms where waiting times and prices in an area depend mainly on nearby demand and supply, or epidemic and diffusion models where the state of a location next period depends on its own and its neighbors' states (add some references here). 
+
+\begin{assu}
+For each region $i$ there exists a neighborhood $N(i) \subseteq V$ such that:
+\begin{enumerate}
+\item The reward of agents in region $i$ depends only on local state in $N(i)$. In other words, for all $s \in \mathcal S^n$,
+\begin{equation}
+v_i(a_i,s) = v_i(a_i,s_{N(i)}).
+\end{equation}
+\item he next-period state of region $i$ depends on $(S_t,A_t)$ only through the local configuration $(S_{N(i),t},A_{N(i),t})$.  Formally, for all measurable $\mathcal S' \subseteq \mathcal S$,
+\begin{equation}
+\PP{S_{i,t+1} \in \mathcal S'\cond S_t = s, A_t = a} = 
+\PP{S_{i,t+1} \in \mathcal S'\cond S_t = s', A_t = a'}
+\end{equation}
+whenever $(s_{N(i)},a_{N(i)}) = (s'_{N(i)},a'_{N(i)})$.
+\end{enumerate}
+\end{assu}
 
 
 \bibliographystyle{plainnat}
